--- a/quarto-2.qmd
+++ b/quarto-2.qmd
@@ -3,25 +3,27 @@ title: "Quarto 2"
 author: "Tigran"
 format: html
 editor: visual
+execute: 
+  echo: false
 ---
 
-## Quarto
-
-Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
-
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
-
 ```{r}
-1 + 1
+#| message: false
+#| label: setup
+
+library(tidyverse)
+library(palmerpenguins)
 ```
 
-You can add options to executable code like this
-
 ```{r}
-#| echo: false
-2 * 2
-```
+#| warning: false
+#| label: make-plot
 
-The `echo: false` option disables the printing of code (only output is displayed).
+
+penguins |> 
+  ggplot(aes(x = body_mass_g, y = flipper_length_mm, color = species)) +
+    geom_point() +
+    labs(title = "Penguins Body Mass compared to Flipper Length", 
+         x = "Body Mass", 
+         y = "Flipper Length")
+```
